# GenAI-RAG-Platform

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DESCRIPTION.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-eval.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  terraform-plan.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: architecture.md  deployment.md  runbook.md
docs/adr/: 0001-hybrid-cache-routed-rag.md
docs/diagrams/: architecture.mmd
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret-store.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
requirements/: README.md  requirements-dev.txt  requirements-eval.txt  requirements.txt
scripts/: alloydb-proxy.sh  bootstrap.sh  deploy.sh  drift-check.sh
scripts/sql/: init.sql
src/: __init__.py
src/api/: main.py
src/cache/: semantic_cache.py
src/common/: config.py
src/memory/: session.py
src/observability/: embeddings.py  tracing.py
src/orchestration/: workflow.py
src/reranker/: cross_encoder.py
src/retrieval/: hybrid_search.py
src/router/: intent_router.py
terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: main.tf
terraform/environments/prod/: main.tf
tests/evaluation/: golden.jsonl  test_ragas_eval.py
tests/integration/: test_api_health.py
tests/unit/: test_router.py  test_rrf.py
(+31 files in other folders)
